add unchecked files