@@ -9,6 +9,13 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += ['--enable-preview']
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     testCompile group: 'junit', name: 'junit', version: '4.12'
